fIX public view spacing issue

--- a/src/css/custom-quill.css
+++ b/src/css/custom-quill.css
@@ -1,4 +1,6 @@
 .ql-editor{
     font-size: 14px !important;
+}
+.ql-container{
     min-height: 26rem !important;
 }
